Finish Redux behavior

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 NODE_ENV             ='env'
 
 # app
-REACT_APP_POKE_API_ENDPOINT = 'http://pokeapi.co/api/v2/'
+REACT_APP_POKE_API_ENDPOINT = 'https://pokeapi.co/api/v2'
