--- a/package.json
+++ b/package.json
@@ -60,8 +60,14 @@
     "test": "node scripts/test.js --env=jsdom"
   },
   "devDependencies": {
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
+    "expect": "^23.1.0",
+    "fetch-mock": "^6.4.4",
     "find-cache-dir": "0.1.1",
     "node-sass": "^4.9.0",
+    "react-test-renderer": "^16.4.1",
+    "redux-mock-store": "^1.5.3",
     "sass-loader": "^7.0.3"
   },
   "jest": {
